// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableSection snapshots should not render 1`] = `<DocumentFragment />`;

exports[`DraggableSection snapshots should render DraggableSection 1`] = `
<DocumentFragment>
  <div
    class="DraggableSectionMenu"
  >
    <div
      class="Icon Icon--neutral-1"
      data-test-icon="menu"
      height="8"
      name="Menu"
      width="8"
    />
  </div>
</DocumentFragment>
`;

exports[`DraggableSection snapshots should render when force display 1`] = `
<DocumentFragment>
  <div
    class="DraggableSectionMenu DraggableSectionMenu--force-display"
  >
    <div
      class="Icon Icon--neutral-1"
      data-test-icon="menu"
      height="8"
      name="Menu"
      width="8"
    />
  </div>
</DocumentFragment>
`;
